--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,9 @@ $secoundry: #e91e63;
   color: $primary;
   font-weight: 400;
 }
+.table_header{
+  padding-left: 18px;
+}
 .sub_header{
   flex-grow: initial;
   .points{
