--- a/src/app/weather/weather.page.scss
+++ b/src/app/weather/weather.page.scss
@@ -30,3 +30,9 @@ $dark-color: #303644;
         }
     }
 }
+.feedback{
+    position: absolute;
+    right: 0;
+    bottom: -10px;
+    text-align: center;
+}
