--- a/src/app/take-photo/take-photo.page.html
+++ b/src/app/take-photo/take-photo.page.html
@@ -1,108 +1,30 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+    <ion-buttons slot="end">
+      <!-- <ion-back-button></ion-back-button> -->
     </ion-buttons>
     <ion-title>Take Photo</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <div class="flexCenter">
-    <button mat-fab color="primary" (click)="accessCamera()" aria-label="take photo">
+    <button mat-fab color="primary" (click)="openCamera()" aria-label="take photo">
       <span class="material-icons">
         add_a_photo
       </span>
     </button>
   </div>
-  <mat-card>
+  <!-- <mat-card>
     <div *ngIf="!imageUrl">No data available</div>
     <img *ngIf="imageUrl" [src]="imageUrl" style="width: auto;">
-  </mat-card>
+  </mat-card> -->
+
+  <!-- fab placed to the bottom end -->
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="accessCamera()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab> -->
   
-</ion-content> -->
-
-
-
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons start>
-      <button ion-button color="danger" (click)="reset()">
-        Reset
-      </button>
-    </ion-buttons>
-    <ion-title>Ionic CropperJS</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only color="danger" (click)="clear()">
-        <ion-icon name="close"></ion-icon>
-      </button>
-      <button ion-button icon-only color="secondary" (click)="save()">
-        <ion-icon name="checkmark"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <button ion-button full (click)="captureImage()" *ngIf="!myImage">Capture Image</button>
-  
-  <angular-cropper #angularCropper [cropperOptions]="cropperOptions" [imageUrl]="myImage" *ngIf="myImage"></angular-cropper>
-
-  <ion-row *ngIf="myImage">
-    <ion-col col-4>
-      <button ion-button outline icon-left color="primary" (click)="zoom(true)">
-        <ion-icon name="add"></ion-icon> Zoom
-      </button>
-    </ion-col>
-    <ion-col col-4>
-      <button ion-button outline icon-left color="primary" (click)="zoom(false)">
-        <ion-icon name="remove"></ion-icon> Zoom
-      </button>
-    </ion-col>
-    <ion-col col-4>
-      <button ion-button outline icon-left (click)="rotate()">
-        <ion-icon name="refresh"></ion-icon> 90 deg
-      </button>
-    </ion-col>
-
-    <ion-col col-2>
-      <button ion-button clear (click)="scaleX()">
-        Flip X
-      </button>
-    </ion-col>
-    <ion-col col-2>
-      <button ion-button clear (click)="scaleY()">
-        Flip Y
-      </button>
-    </ion-col>
-
-    <ion-col col-2>
-      <button ion-button clear icon-only (click)="move(0, -10)">
-        <ion-icon name="arrow-round-up"></ion-icon>
-      </button>
-    </ion-col>
-    <ion-col col-2>
-      <button ion-button clear icon-only (click)="move(0, 10)">
-        <ion-icon name="arrow-round-down"></ion-icon>
-      </button>
-    </ion-col>
-    <ion-col col-2>
-      <button ion-button clear icon-only (click)="move(-10, 0)">
-        <ion-icon name="arrow-round-back"></ion-icon>
-      </button>
-    </ion-col>
-    <ion-col col-2>
-      <button ion-button clear icon-only (click)="move(10, 0)">
-        <ion-icon name="arrow-round-forward"></ion-icon>
-      </button>
-    </ion-col>
-  </ion-row>
-
-  <ion-card *ngIf="croppedImage">
-    <ion-card-header>My Result</ion-card-header>
-    <ion-card-content>
-      <img [src]="croppedImage">
-    </ion-card-content>
-  </ion-card>
-
 </ion-content>
