--- a/src/app/take-photo/take-photo.page.scss
+++ b/src/app/take-photo/take-photo.page.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     button{
         display: block;
         width: 150px;
@@ -20,3 +20,10 @@
 mat-card{
     margin: 20px;
 }
+
+// Image style
+.image-container {
+    min-height: 200px;
+    background-size: cover;
+}
+
