--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -61,8 +61,8 @@
 </ion-content> -->
 <ion-content>
   <ion-row class="Crow">
-    <ion-col routerLink="/takePhoto">Crop Image</ion-col>
-    <ion-col routerLink="/camera-priview">Image Priview</ion-col>
+    <!-- <ion-col routerLink="/takePhoto">Crop Image</ion-col> -->
+    <ion-col routerLink="/camera-priview">Crop Image</ion-col>
   </ion-row>
 </ion-content>
 <!-- <ion-tabs>
