--- a/src/app/camera-priview/camera-priview.page.scss
+++ b/src/app/camera-priview/camera-priview.page.scss
@@ -1,17 +1,32 @@
 ion-content{
     --background:transparent !important;
 }
-.fabIcon{
+.instruction{
+    z-index: 1000000 !important;
+    --z-index: 10000000 !important;
+    --box-shadow: none;
+    .c_icon {
+        // transform-origin: 79% 26%;
+        animation: pop 0.8s infinite;
+    }
+}
+.cameraTitle {
+    color: white;
+    position: fixed;
+    text-align: center;
+    top: 50px;
+    width: 100%; 
+    padding: 10px;
     z-index: 100000;
+    font-weight: 500;
 }
 .cameraButtons {
     position: fixed;
     text-align: center;
-    // background-color: black;
-    // background: transparent;
     bottom: 0px;
     width: 100%;
-    z-index: 10000000;
+    z-index: 100000;
+    
     ion-button{
         margin-right: 8px;
         
@@ -22,18 +37,59 @@ ion-content{
         width: 55px;
     }
 }
+.zoomOption{
+    span{
+        background: RGBA(255,225,225,0.4);
+        height: 100px;
+        width: 100px;
+        color: black;
+        border-radius: 50%;
+        margin-right: 12px;
+        font-size: 12px;
+        padding: 5px;
+    }
+    // margin-bottom: 15px;
+    padding: 0px 20px;
+    &:hover {
+        padding: 10px;
+    }
+}
+
 .OverlayImg{
     position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
-   z-index: 100000;
+   z-index: 100;
    width: 100%;
-   height: 88%;
+   height: 100%;
+    // padding: 25% 20%;
    .borderDiv{
        border: 4px solid #d84315;
-       border-radius: 15px;
-       height: 56vh;
-       width: 54vw;
+       height: 64vh;
+       width: 64vw;
    }
+}
+.imgPreview{
+    position: relative;
+    .cardDiv{
+        padding: 1rem 1.5rem;
+    }
+    ion-card{
+        --background: #1a1a1c;
+    }
+    ion-card-content{
+        text-align: center;
+    }    
+}
+@keyframes pop {
+	0% {
+		transform: scale(1,1);
+	}
+	50% {
+		transform: scale(1.1,1.1);
+	}
+	100% {
+		transform: scale(1,1);
+	}
 }
